--- a/src/styles/constants.scss
+++ b/src/styles/constants.scss
@@ -1,5 +1,7 @@
-$mainBackground: #000;
+$mainBackground: #e4e4e4;
 $fontSize: 17px;
+$fontFamily: Arial Sans serif;
 
 $headerBackground: #ffffff;
-$headerHeight: 200px;
+
+$newsHeight: 100px;
