--- a/src/styles/constants.scss
+++ b/src/styles/constants.scss
@@ -1,7 +1,10 @@
 $mainBackground: #e4e4e4;
-$fontSize: 17px;
+$fontFullSize: 17px;
+$fontMediumSize: 15px;
+$fontSmallSize: 13px;
 $fontFamily: Arial Sans serif;
 
 $headerBackground: #ffffff;
+$headerHeight: calc(100vw / 4 );
 
 $newsHeight: 100px;
