--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -12,11 +12,26 @@ body {
   position: relative;
   width: 100%;
   height: 100%;
+  min-height: 100vh;
   margin: 0;
   padding: 0;
   background: $mainBackground;
-  font-size: $fontSize;
+  font-size: $fontFullSize;
+  @media screen and (max-width: 800px) {
+    font-size: $fontMediumSize;
+  }
+  @media screen and (max-width: 400px) {
+    font-size: $fontSmallSize;
+  }
   font-family: $fontFamily;
+}
+
+div#root {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
+  min-width: 320px;
 }
 
 .devText {
