--- a/src/styles/constants.scss
+++ b/src/styles/constants.scss
@@ -7,4 +7,6 @@ $fontFamily: Arial Sans serif;
 $headerBackground: #ffffff;
 $headerHeight: calc(100vw / 4 );
 
+$footerHeight: 60px;
+
 $newsHeight: 100px;
