fix footer, admin console with back, menu fix, added localization, services

--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -68,5 +68,13 @@ section.header-container {
         text-decoration: none;
       }
     }
+    &.withBack {
+      li {
+        display: none;
+        &.consoleQuit {
+          display: flex;
+        }
+      }
+    }
   }
 }
