added gallery temp

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -2,6 +2,7 @@
 
 @import './components/header.scss';
 @import './components/footer.scss';
+@import './components/galleryList.scss';
 
 @import './containers/news.scss';
 
